# Snake

./: CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Logger.cpp  Main.cpp  Network.cpp  Network.h  Object.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Settings.h
BaseObjects/: Background.cpp  Background.h  Snake.cpp  Snake.h  SnakeSegment.cpp  SnakeSegment.h
Core/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  Main.cpp  Object.h  Renderer.cpp  Renderer.h
Core/Network/: INetwork.h  Network.h  NetworkClient.cpp  NetworkClient.h  NetworkLocal.cpp  NetworkLocal.h  NetworkServer.cpp  NetworkServer.h
Network/: Network.h  NetworkClient.cpp  NetworkClient.h  NetworkLocal.cpp  NetworkLocal.h  NetworkServer.cpp  NetworkServer.h
Snake/: Snake.cpp  Snake.h  SnakeSegment.cpp  SnakeSegment.h
src/: Game.cpp  Game.h  Main.cpp  Renderer.cpp  Util.cpp  Util.h  World.cpp  World.h
src/Entity/: Entity.cpp  Entity.h  Fruit.cpp  Fruit.h  Snake.cpp  Snake.h  SnakeBodyPart.cpp  SnakeBodyPart.h
src/Game/: Client.cpp  Client.h  Game.h  Server.cpp  Server.h  Singleplayer.cpp  Singleplayer.h
src/Network/: Network.h  NetworkClient.cpp  NetworkClient.h  NetworkLocal.cpp  NetworkLocal.h  NetworkServer.cpp  NetworkServer.h
src/Util/: Config.h  Grid.cpp  Grid.h  Resource.cpp  Resource.h
